restore default parameters

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -7,68 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "year = None\n",
-    "month = None\n",
+    "year = 2024\n",
+    "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = True\n",
     "dynamic_labels = {}\n",
-    "use_imperial = False\n",
-    "survey_info =  {\n",
-    "    \"surveys\": {\n",
-    "      \"UserProfileSurvey\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-onboarding-v1.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/demographic_survey\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcEvReturnTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-return-trip-v1.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcEvRoamingTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-roaming-trip-v1.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcGasTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-gas-trip-v1.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      }\n",
-    "    },\n",
-    "    \"buttons\": {\n",
-    "      \"trip-label\": [\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcGasTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"Gas Car Survey\" },\n",
-    "          \"showsIf\": \"confirmedMode?.baseMode == 'CAR'\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcEvRoamingTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"confirmedMode?.baseMode == 'E_CAR' && !pointIsWithinBounds(end_loc['coordinates'], [[-105.118, 39.719], [-105.115, 39.717]])\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcEvReturnTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"confirmedMode?.baseMode == 'E_CAR' && pointIsWithinBounds(end_loc['coordinates'], [[-105.118, 39.719], [-105.115, 39.717]])\"\n",
-    "        }\n",
-    "      ]\n",
-    "    },\n",
-    "    \"trip-labels\": \"ENKETO\"\n",
-    "  }"
+    "use_imperial = True\n",
+    "survey_info = {}"
    ]
   },
   {
