handle empty dataframes better
errors encountered while testing

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -257,11 +257,11 @@
     "\n",
     "    #gather the cols needed for charts and text\n",
     "    survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
+    "    survey_trips.groupby('survey_name').count()\n",
     "    \n",
     "except:\n",
     "    survey_trips = pd.DataFrame()\n",
-    "\n",
-    "survey_trips.groupby('survey_name').count()"
+    "\n"
    ]
   },
   {
@@ -279,7 +279,12 @@
     "color_map = mapping_color_surveys(opt_dict)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
-    "df_responses = create_dataframe(survey_trips)\n",
+    "if len(survey_trips) > 0:\n",
+    "    df_responses = create_dataframe(survey_trips)\n",
+    "else:\n",
+    "    df_responses = survey_trips.copy()\n",
+    "    \n",
+    "    \n",
     "file_suffix = scaffolding.get_file_suffix(year, month, program)"
    ]
   },
