handle "Other" values in color map

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -214,7 +214,7 @@
     "        \n",
     "        color_map[label] = color\n",
     "    \n",
-    "    print(color_map)\n",
+    "    color_map['Other'] = existing_map['Other']\n",
     "    \n",
     "    return color_map"
    ]
