♻️  Minor fixes to the survey metrics
- use `.get` to check whether this is an enketo survey so that it works for
  older deployments that predate the `survey_info` functionality as well. This
  has no functional difference since, if there is no `survey_info`, this is not
  a survey. But we get a better exception and avoid confusion later.
- improve error handling for survey_responses, by splitting the attribute and
  name errors from the more complex errors

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Do not run this notebook at all unless it is for a survey configuration; nbclient will run up through this cell\n",
-    "if not survey_info['trip-labels'] == 'ENKETO':\n",
+    "if not survey_info.get('trip-labels', None) == 'ENKETO':\n",
     "    ipython = get_ipython()\n",
     "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
     "    raise Exception(\"The plots in this notebook are only relevant to deployments with trip-level surveys\")"
