refactor data loading
push the data loading process into scaffolding.py (where it belongs) and update process to match convention

we load all participant trips, then filter to the trips with input, and return both filtered and unfiltered frames

filtered is used for visualization, unfiltered is required for the quality text stats

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -240,15 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tq = scaffolding.get_time_query(year, month)\n",
-    "all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
-    "#we need to filter out trips (based on if including test users)\n",
-    "all_confirmed_trips = scaffolding.filter_composite_trips(all_confirmed_trips, program, include_test_users)\n",
+    "all_confirmed_trips, survey_trips = scaffolding.load_viz_notebook_survey_data(year, month, program, include_test_users)\n",
     "\n",
     "try:\n",
-    "    #remove blank inputs\n",
-    "    survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
-    "\n",
     "    #survey counts df\n",
     "    survey_trips = survey_trips.reset_index()\n",
     "    survey_trips['survey_name'] = survey_trips.user_input.apply(lambda sr: sr['trip_user_input']['data']['name'])\n",
@@ -258,8 +252,7 @@
     "    survey_trips.groupby('survey_name').count()\n",
     "    \n",
     "except:\n",
-    "    survey_trips = pd.DataFrame()\n",
-    "\n"
+    "    survey_trips = pd.DataFrame()\n"
    ]
   },
   {
