get scaffolding text as part of data load

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -240,7 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_confirmed_trips, survey_trips = scaffolding.load_viz_notebook_survey_data(year, month, program, include_test_users)\n",
+    "#load data - all data and data with labels\n",
+    "all_confirmed_trips, survey_trips, file_suffix = scaffolding.load_viz_notebook_survey_data(year, month, program, include_test_users)\n",
     "\n",
     "try:\n",
     "    #survey counts df\n",
@@ -273,10 +274,7 @@
     "if len(survey_trips) > 0:\n",
     "    df_responses = create_dataframe(survey_trips)\n",
     "else:\n",
-    "    df_responses = survey_trips.copy()\n",
-    "    \n",
-    "    \n",
-    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
+    "    df_responses = survey_trips.copy()"
    ]
   },
   {
