format responses in the same cell as data load
as a part of centralizing the data loading, move the formatting of data into the same cell

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -253,7 +253,13 @@
     "    survey_trips.groupby('survey_name').count()\n",
     "    \n",
     "except:\n",
-    "    survey_trips = pd.DataFrame()\n"
+    "    survey_trips = pd.DataFrame()\n",
+    "\n",
+    "#format survey trips into responses dataframe\n",
+    "if len(survey_trips) > 0:\n",
+    "    df_responses = create_dataframe(survey_trips)\n",
+    "else:\n",
+    "    df_responses = survey_trips.copy()"
    ]
   },
   {
@@ -268,13 +274,7 @@
     "print(\"Questions dictionary:\\n\",quest_dict)\n",
     "print(\"Options dictionary:\\n\", opt_dict)\n",
     "\n",
-    "color_map = mapping_color_surveys(opt_dict)\n",
-    "\n",
-    "#format survey trips into responses dataframe\n",
-    "if len(survey_trips) > 0:\n",
-    "    df_responses = create_dataframe(survey_trips)\n",
-    "else:\n",
-    "    df_responses = survey_trips.copy()"
+    "color_map = mapping_color_surveys(opt_dict)"
    ]
   },
   {
