use correct color mapping function
I had created two functions, one in the notebook, one in scaffolding, I was using the one in the notebook, but thought I was using the one in scaffolding

This created a catastrophic error when trying to fetch the colors for the charts - fixed now!

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -182,16 +182,6 @@
     "    \n",
     "    return debug_df\n",
     "\n",
-    "#color dictionary\n",
-    "def mapping_color_surveys(dic_options):\n",
-    "    dictionary_values = (list(collections.OrderedDict.fromkeys(dic_options.values())))\n",
-    "    \n",
-    "    colors = {}\n",
-    "    for i in range(len(dictionary_values)):\n",
-    "        colors[dictionary_values[i]] = plt.cm.tab10.colors[i%10]\n",
-    "    \n",
-    "    return colors\n",
-    "\n",
     "#workaround missing colors\n",
     "def get_survey_colors(labels, existing_map):\n",
     "    color_map = {}\n",
@@ -274,7 +264,7 @@
     "print(\"Questions dictionary:\\n\",quest_dict)\n",
     "print(\"Options dictionary:\\n\", opt_dict)\n",
     "\n",
-    "color_map = mapping_color_surveys(opt_dict)"
+    "color_map = scaffolding.mapping_color_surveys(opt_dict)"
    ]
   },
   {
