--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "#if fleet, replace primary_mode with primary_ble_sensed mode\n",
-    "if bluetooth_only:\n",
+    "if bluetooth_only and 'ble_sensed_summary' in expanded_ct_sensed.columns:\n",
     "    expanded_ct_sensed = expanded_ct_sensed[expanded_ct_sensed['ble_sensed_summary'].notna()]\n",
     "    expanded_ct_sensed[\"primary_mode\"] = expanded_ct_sensed.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
     "    unique_keys = expanded_ct_sensed.groupby(\"primary_mode\").agg({distance_col: \"count\"}).index\n",
