make create_dataframe function more clear
rename the function to be more clear about the purpose, and create the empty dataframe in the else explicitly

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -130,7 +130,7 @@
     "#input: dataframe containing all trips that have non-blank user_input\n",
     "#output: dataframe with questions in the columns and answers in the rows\n",
     "#for loop will run n survey responses times (this could get big!)\n",
-    "def create_dataframe(df_trips_w_surveys):\n",
+    "def create_trip_survey_dataframe(df_trips_w_surveys):\n",
     "    df = df_trips_w_surveys.reset_index()\n",
     "    \n",
     "    #normalize the survey responses\n",
@@ -247,9 +247,9 @@
     "\n",
     "#format survey trips into responses dataframe\n",
     "if len(survey_trips) > 0:\n",
-    "    df_responses = create_dataframe(survey_trips)\n",
+    "    df_responses = create_trip_sruvey_dataframe(survey_trips)\n",
     "else:\n",
-    "    df_responses = survey_trips.copy()"
+    "    df_responses = pd.DataFrame(columns=survey_trips.columns)"
    ]
   },
   {
