add quality text
added quality text to survey metrics which is just the numerator, will add the demoninator when the data model supports it

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -338,9 +338,10 @@
     "            quest_frame[col].replace('', np.nan, inplace=True)\n",
     "            quest_frame.dropna(subset=[col], inplace=True)\n",
     "            \n",
-    "#             qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
-    "#             plot_title = plot_title_no_quality+'\\n'+qual_text\n",
-    "            plot_title = plot_title_no_quality\n",
+    "            #temp quality text -- just based on the responses\n",
+    "            qual_text = scaffolding.get_quality_text_numerator(quest_frame, include_test_users)\n",
+    "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "            #plot_title = plot_title_no_quality\n",
     "            \n",
     "            fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "\n",
