patch likert questions
if a question is likert, will show the text when present, else a number

ordered the responses so the numbers make more sense in context?

needed to stop ordering in the plotting function -- not sure if this will break anything else

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -108,7 +108,11 @@
     "            if label.parentNode.nodeName == 'item':\n",
     "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
     "                    if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys():\n",
-    "                        opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
+    "                        #use labels if not a dash and numbers if it is a dash?\n",
+    "                        if label.firstChild.data  == \"-\":\n",
+    "                            opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
+    "                        else:\n",
+    "                            opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data   \n",
     "                elif label.parentNode.getElementsByTagName(\"value\"):\n",
     "                    if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys():\n",
     "                        opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
@@ -351,6 +355,7 @@
     "            plot_df = quest_frame.groupby(['survey_name', col]).count().reset_index()\n",
     "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
     "            plot_df = plot_df.set_index(col)[['start']]\n",
+    "            plot_df = plot_df.reindex(opt_dict.values()).dropna() #ordered, as for likert\n",
     "            \n",
     "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, get_survey_colors(list(plot_df.index.values) ,color_map), debug_df)\n",
     "            set_title_and_save(fig, text_results, plot_title, filename)\n",
