update likert labels
https://github.com/e-mission/em-public-dashboard/pull/136#issuecomment-2133994291

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -112,7 +112,7 @@
     "                        if label.firstChild.data  == \"-\":\n",
     "                            opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
     "                        else:\n",
-    "                            opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data   \n",
+    "                            opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data + ' (' + label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data + ')'\n",
     "                elif label.parentNode.getElementsByTagName(\"value\"):\n",
     "                    if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys():\n",
     "                        opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
