remove hardcoded "selected by users" text

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "file_name = f'ntrips_total{file_suffix}'\n",
-    "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
+    "plot_title_no_quality= \"Number of trips for each mode\"\n",
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
+    "plot_title_no_quality= \"Number of commute trips for each mode\"\n",
     "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Number of trips for each purpose (selected by users)\"\n",
+    "plot_title_no_quality=\"Number of trips for each purpose\"\n",
     "file_name= f\"ntrips_purpose{file_suffix}\"\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
