--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -332,33 +332,39 @@
     "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
     "    debug_df = generate_debug_df(program, include_test_users, all_confirmed_trips, df_responses) #survey filtering still buggy, omitting all features of \"num trips survey presented\"\n",
     "    \n",
-    "    for col in quest_dict[survey_name].keys():\n",
-    "        filename = col + file_suffix\n",
-    "        plot_title_no_quality = survey_name + \"\\n\" + quest_dict[survey_name][col]\n",
+    "    n =len(quest_dict[survey_name].keys())\n",
+    "    fig, ax = plt.subplots(nrows=n, ncols=1, figsize=(15,2*n), sharex=True)\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"]] * n\n",
+    "    filename = survey_name + file_suffix\n",
+    "    \n",
+    "    #temp quality text -- just based on the responses\n",
+    "    plot_title_no_quality = survey_name\n",
+    "    qual_text = scaffolding.get_quality_text_numerator(df_responses[df_responses['survey_name'] == survey_name], include_test_users)\n",
+    "    plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "    \n",
+    "    for i in range(len(quest_dict[survey_name].keys())):\n",
+    "        col = list(quest_dict[survey_name].keys())[i]\n",
     "\n",
     "        try:\n",
     "            quest_frame = df_responses.copy()\n",
     "            quest_frame = quest_frame[quest_frame['survey_name'] == survey_name]\n",
     "            quest_frame[col].replace('', np.nan, inplace=True)\n",
     "            quest_frame.dropna(subset=[col], inplace=True)\n",
-    "            \n",
-    "            #temp quality text -- just based on the responses\n",
-    "            qual_text = scaffolding.get_quality_text_numerator(quest_frame, include_test_users)\n",
-    "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
-    "            #plot_title = plot_title_no_quality\n",
-    "            \n",
-    "            fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "\n",
     "            quest_frame[col] = quest_frame[col].apply(lambda x: traslate_options(x, opt_dict))\n",
-    "            text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]  \n",
     "\n",
     "            plot_df = quest_frame.groupby(['survey_name', col]).count().reset_index()\n",
     "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
     "            plot_df = plot_df.set_index(col)[['start']]\n",
     "            plot_df = plot_df.reindex(opt_dict.values()).dropna() #ordered, as for likert\n",
     "            \n",
-    "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, get_survey_colors(list(plot_df.index.values) ,color_map), debug_df)\n",
-    "            set_title_and_save(fig, text_results, plot_title, filename)\n",
+    "            #split question for axis label\n",
+    "            axis_list = quest_dict[survey_name][col].split()\n",
+    "            l = len(axis_list)//3\n",
+    "            axis_label = f'{\" \".join(axis_list[0:l])}\\n{\" \".join(axis_list[l:2*l])}\\n{\" \".join(axis_list[2*l:])}'\n",
+    "            \n",
+    "            plot_and_text_stacked_bar_chart(plot_df, lambda df: df, axis_label, ax[i], text_results[i], get_survey_colors(list(plot_df.index.values), color_map), debug_df)\n",
+    "            \n",
     "        except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
     "            plt.clf()\n",
     "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
@@ -366,7 +372,9 @@
     "            alt_html = store_alt_html_missing(debug_df, filename, plot_title_no_quality)\n",
     "        except Exception as e:\n",
     "            fig, ax = plt.subplots()\n",
-    "            plot_and_text_error(e, ax, filename)"
+    "            plot_and_text_error(e, ax, filename)\n",
+    "                  \n",
+    "    set_title_and_save(fig, text_results, plot_title, filename) "
    ]
   }
  ],
