fix typo - add a closing paren

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip\"'\n",
+    "plot_title_no_quality = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip)\"'\n",
     "file_name = \"ts_all_modes%s\"%file_suffix\n",
     "\n",
     "try:\n",
