adjust error handling in full survey chart
need to catch errors for the chart as a whole, not one bar at a time

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -326,7 +326,7 @@
    },
    "outputs": [],
    "source": [
-    "#create one plot per question in the survey\n",
+    "#create one plot per survey, one bar per question\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
     "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
@@ -339,13 +339,14 @@
     "    \n",
     "    #temp quality text -- just based on the responses\n",
     "    plot_title_no_quality = survey_name\n",
-    "    qual_text = scaffolding.get_quality_text_numerator(df_responses[df_responses['survey_name'] == survey_name], include_test_users)\n",
-    "    plot_title = plot_title_no_quality+'\\n'+qual_text\n",
     "    \n",
-    "    for i in range(len(quest_dict[survey_name].keys())):\n",
-    "        col = list(quest_dict[survey_name].keys())[i]\n",
+    "    try:\n",
+    "        qual_text = scaffolding.get_quality_text_numerator(df_responses[df_responses['survey_name'] == survey_name], include_test_users) if 'survey_name' in df_responses.columns else \"No Responses\"\n",
+    "        plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "    \n",
+    "        for i in range(len(quest_dict[survey_name].keys())):\n",
+    "            col = list(quest_dict[survey_name].keys())[i]\n",
     "\n",
-    "        try:\n",
     "            quest_frame = df_responses.copy()\n",
     "            quest_frame = quest_frame[quest_frame['survey_name'] == survey_name]\n",
     "            quest_frame[col].replace('', np.nan, inplace=True)\n",
@@ -357,24 +358,24 @@
     "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
     "            plot_df = plot_df.set_index(col)[['start']]\n",
     "            plot_df = plot_df.reindex(opt_dict.values()).dropna() #ordered, as for likert\n",
-    "            \n",
+    "\n",
     "            #split question for axis label\n",
     "            axis_list = quest_dict[survey_name][col].split()\n",
     "            l = len(axis_list)//3\n",
     "            axis_label = f'{\" \".join(axis_list[0:l])}\\n{\" \".join(axis_list[l:2*l])}\\n{\" \".join(axis_list[2*l:])}'\n",
-    "            \n",
+    "\n",
     "            plot_and_text_stacked_bar_chart(plot_df, lambda df: df, axis_label, ax[i], text_results[i], get_survey_colors(list(plot_df.index.values), color_map), debug_df)\n",
-    "            \n",
-    "        except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
-    "            plt.clf()\n",
-    "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
-    "            alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)        \n",
-    "            alt_html = store_alt_html_missing(debug_df, filename, plot_title_no_quality)\n",
-    "        except Exception as e:\n",
-    "            fig, ax = plt.subplots()\n",
-    "            plot_and_text_error(e, ax, filename)\n",
-    "                  \n",
-    "    set_title_and_save(fig, text_results, plot_title, filename) "
+    "        \n",
+    "        set_title_and_save(fig, text_results, plot_title, filename) \n",
+    "\n",
+    "    except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "        plt.clf()\n",
+    "        generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
+    "        alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)        \n",
+    "        alt_html = store_alt_html_missing(debug_df, filename, plot_title_no_quality)\n",
+    "    except Exception as e:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        plot_and_text_error(e, ax, filename)"
    ]
   }
  ],
