enable labeled vs sensed for survey deployments

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -409,10 +409,13 @@
     "file_name = \"ts_totalvlabeled%s\"%file_suffix\n",
     "\n",
     "try:\n",
-    "    labeled_data = mode_counts.copy()\n",
-    "    labeled_data.groupby(['date_time'], as_index=False).sum()\n",
-    "    labeled_data = labeled_data.groupby(['date_time'], as_index=False).sum()\n",
-    "    labeled_data['Trip_type'] = \"Labeled\"\n",
+    "    labeled_trips = data.copy()\n",
+    "    labeled_trips = labeled_trips.groupby(['user_id','date_time'], as_index=False).size()\n",
+    "    labeled_trips.rename(columns={'size':'trip_count'}, inplace=True)\n",
+    "    labeled_trips['trip_count_smooth'] = labeled_trips.groupby(['user_id'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    labeled_trips.groupby(['date_time'], as_index=False).sum()\n",
+    "    labeled_trips = labeled_trips.groupby(['date_time'], as_index=False).sum()\n",
+    "    labeled_trips['Trip_type'] = \"Labeled\"\n",
     "\n",
     "    total_trips = expanded_ct_sensed.copy()\n",
     "    total_trips = total_trips.groupby(['user_id','date_time'], as_index=False).size()\n",
@@ -422,7 +425,9 @@
     "    total_trips = total_trips.groupby(['date_time'], as_index=False).sum()\n",
     "    total_trips['Trip_type'] = \"Total\"\n",
     "\n",
-    "    plot_data = pd.concat([labeled_data, total_trips])\n",
+    "    plot_data = pd.concat([labeled_trips, total_trips])\n",
+    "    \n",
+    "    print(plot_data.head())\n",
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Trip Count'\n",
