clarify loop over questions
n_quests is the number of questions for a given survey, it determines the number of bars in each survey's chart, as well as the number of inner loops performed

i runs from 0 to n_quests and controls the position of the bar within the chart

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -332,9 +332,9 @@
     "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
     "    debug_df = generate_debug_df(program, include_test_users, all_confirmed_trips, df_responses) #survey filtering still buggy, omitting all features of \"num trips survey presented\"\n",
     "    \n",
-    "    n =len(quest_dict[survey_name].keys())\n",
-    "    fig, ax = plt.subplots(nrows=n, ncols=1, figsize=(15,2*n), sharex=True)\n",
-    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"]] * n\n",
+    "    n_quests =len(quest_dict[survey_name].keys())\n",
+    "    fig, ax = plt.subplots(nrows=n_quests, ncols=1, figsize=(15,2*n_quests), sharex=True)\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"]] * n_quests\n",
     "    filename = survey_name + file_suffix\n",
     "    \n",
     "    #temp quality text -- just based on the responses\n",
@@ -344,23 +344,23 @@
     "        qual_text = scaffolding.get_quality_text_numerator(df_responses[df_responses['survey_name'] == survey_name], include_test_users) if 'survey_name' in df_responses.columns else \"No Responses\"\n",
     "        plot_title = plot_title_no_quality+'\\n'+qual_text\n",
     "    \n",
-    "        for i in range(len(quest_dict[survey_name].keys())):\n",
-    "            col = list(quest_dict[survey_name].keys())[i]\n",
+    "        for i in range(n_quests):\n",
+    "            quest_name = list(quest_dict[survey_name].keys())[i]\n",
     "\n",
     "            quest_frame = df_responses.copy()\n",
     "            quest_frame = quest_frame[quest_frame['survey_name'] == survey_name]\n",
-    "            quest_frame[col].replace('', np.nan, inplace=True)\n",
-    "            quest_frame.dropna(subset=[col], inplace=True)\n",
+    "            quest_frame[quest_name].replace('', np.nan, inplace=True)\n",
+    "            quest_frame.dropna(subset=[quest_name], inplace=True)\n",
     "\n",
-    "            quest_frame[col] = quest_frame[col].apply(lambda x: traslate_options(x, opt_dict))\n",
+    "            quest_frame[quest_name] = quest_frame[quest_name].apply(lambda x: traslate_options(x, opt_dict))\n",
     "\n",
-    "            plot_df = quest_frame.groupby(['survey_name', col]).count().reset_index()\n",
+    "            plot_df = quest_frame.groupby(['survey_name', quest_name]).count().reset_index()\n",
     "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
-    "            plot_df = plot_df.set_index(col)[['start']]\n",
+    "            plot_df = plot_df.set_index(quest_name)[['start']]\n",
     "            plot_df = plot_df.reindex(opt_dict.values()).dropna() #ordered, as for likert\n",
     "\n",
     "            #split question for axis label\n",
-    "            axis_list = quest_dict[survey_name][col].split()\n",
+    "            axis_list = quest_dict[survey_name][quest_name].split()\n",
     "            l = len(axis_list)//3\n",
     "            axis_label = f'{\" \".join(axis_list[0:l])}\\n{\" \".join(axis_list[l:2*l])}\\n{\" \".join(axis_list[2*l:])}'\n",
     "\n",
