--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -30,6 +30,7 @@
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = False"
+    "sensed_algo_prefix = \"cleaned\""
    ]
   },
   {
