handle zero division error more elegantly

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -206,7 +206,7 @@
     "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, lambda df: df.groupby(\"primary_mode\").agg({distance_col: 'count'}).sort_values(by=distance_col, ascending=False), \n",
     "                                    \"Sensed by OpenPATH\\n\"+sensed_u80_quality_text, ax, text_results, colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title_no_quality, file_name)\n",
-    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError, ZeroDivisionError) as e:\n",
     "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
     "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
     "    plt.clf()\n",
