update the text array initialization
the prior method was resulting in each entry being a copy of the other, this allows each position to be set seperately

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -334,7 +334,7 @@
     "    \n",
     "    n_quests =len(quest_dict[survey_name].keys())\n",
     "    fig, ax = plt.subplots(nrows=n_quests, ncols=1, figsize=(15,2*n_quests), sharex=True)\n",
-    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"]] * n_quests\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"] for i in range(n_quests)]\n",
     "    filename = survey_name + file_suffix\n",
     "    \n",
     "    #temp quality text -- just based on the responses\n",
