--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -29,7 +29,7 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
-    "use_imperial = False"
+    "use_imperial = False\n",
     "sensed_algo_prefix = \"cleaned\""
    ]
   },
